# advanced-ai-research-2026

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci-cd.yml
configs/: analyzer_config.yaml  diffusion_config.yaml
docs/: conf.py  index.rst
notebooks/demos/: quick_demo.ipynb
scripts/: train_analyzer.py  train_diffusion.py
src/api/: main.py
src/models/: __init__.py  advanced_disinformation_analyzer.py  manifold_diffusion_model.py
tests/: test_advanced_models.py
